; ModuleID = '/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_msg.c_nlmsg_alloc_simple.c'
source_filename = "/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_msg.c_nlmsg_alloc_simple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nl_msg = type { i32 }
%struct.nlmsghdr = type { i32, i32 }

@.str = private unnamed_addr constant [38 x i8] c"msg %p: Allocated new simple message\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.nl_msg* @nlmsg_alloc_simple(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.nl_msg*, align 8
  %6 = alloca %struct.nlmsghdr, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = getelementptr inbounds %struct.nlmsghdr, %struct.nlmsghdr* %6, i32 0, i32 0
  %8 = load i32, i32* %3, align 4
  store i32 %8, i32* %7, align 4
  %9 = getelementptr inbounds %struct.nlmsghdr, %struct.nlmsghdr* %6, i32 0, i32 1
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %9, align 4
  %11 = call %struct.nl_msg* @nlmsg_inherit(%struct.nlmsghdr* %6)
  store %struct.nl_msg* %11, %struct.nl_msg** %5, align 8
  %12 = load %struct.nl_msg*, %struct.nl_msg** %5, align 8
  %13 = icmp ne %struct.nl_msg* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %2
  %15 = load %struct.nl_msg*, %struct.nl_msg** %5, align 8
  %16 = call i32 @NL_DBG(i32 2, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), %struct.nl_msg* %15)
  br label %17

17:                                               ; preds = %14, %2
  %18 = load %struct.nl_msg*, %struct.nl_msg** %5, align 8
  ret %struct.nl_msg* %18
}

declare dso_local %struct.nl_msg* @nlmsg_inherit(%struct.nlmsghdr*) #1

declare dso_local i32 @NL_DBG(i32, i8*, %struct.nl_msg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
